// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`carriage is false 1`] = `
<div
  className="route_section_form flex-55 layout-row layout-wrap"
>
  <Dropdown
    childrenProps={
      Object {
        "childrenPropBar": "childrenPropBar",
        "childrenPropFoo": "childrenPropFoo",
      }
    }
    t={[Function]}
  />
</div>
`;

exports[`carriage is true 1`] = `
<div
  className="route_section_form flex-55 layout-row layout-wrap"
>
  <AddressFields
    childrenProps={
      Object {
        "childrenPropBar": "childrenPropBar",
        "childrenPropFoo": "childrenPropFoo",
      }
    }
    t={[Function]}
  />
</div>
`;

exports[`with empty props 1`] = `
<div
  className="route_section_form flex-55 layout-row layout-wrap"
>
  <Dropdown
    t={[Function]}
  />
</div>
`;
